docs(agent): record pending release intent recovery